update api url and readme rewrite

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,20 +97,18 @@
     "        Returns the amount in satoshi\n",
     "        '''\n",
     "        # use self.fetch_tx to get the transaction\n",
-    "        tx = self.fetch_tx(testnet=testnet)\n",
     "        # get the output at self.prev_index\n",
     "        # return the amount property\n",
-    "        return tx.tx_outs[self.prev_index].amount\n",
+    "        pass\n",
     "\n",
     "    def script_pubkey(self, testnet=False):\n",
     "        '''Get the scriptPubKey by looking up the tx hash on libbitcoin server\n",
     "        Returns the binary scriptpubkey\n",
     "        '''\n",
     "        # use self.fetch_tx to get the transaction\n",
-    "        tx = self.fetch_tx(testnet=testnet)\n",
     "        # get the output at self.prev_index\n",
-    "        # return the script_pubkey property and serialize\n",
-    "        return tx.tx_outs[self.prev_index].script_pubkey"
+    "        # return the script_pubkey property\n",
+    "        pass"
    ]
   }
  ],
