mv top code section to mkdown to make tests work

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,22 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inputs and pubkeys [NOT WORKING]"
+    "# Inputs and PubKeys"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Example of how to look up a transaction using fetch_tx() method\n",
+    "Example of how to look up a transaction using fetch_tx() method\n",
     "\n",
+    "```python\n",
     "from tx import TxIn\n",
     "\n",
     "prev_tx = bytes.fromhex('d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81') \n",
     "tx_in = TxIn(prev_tx, 0, b'', 0xffffffff)\n",
-    "print(tx_in.fetch_tx())"
+    "print(tx_in.fetch_tx())\n",
+    "```"
    ]
   },
   {
