update notebook and exercise on the the solution

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,22 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import everything and define a test runner function\n",
-    "from importlib import reload\n",
-    "from helper import run_test\n",
-    "\n",
-    "import ecc\n",
-    "import helper\n",
-    "import script\n",
-    "import tx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Example of how to look up a transaction using fetch_tx() method\n",
     "\n",
     "from tx import TxIn\n",
@@ -42,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Try it\n",
     "\n",
     "\n",
     "#### What is the value and scriptPubKey of the 0th output of this transaction?\n",
@@ -57,8 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.1\n",
-    "\n",
     "from tx import TxIn\n",
     "\n",
     "prev_tx = bytes.fromhex('d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81') \n",
