automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,9 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42505594\n",
+      "OP_DUP OP_HASH160 a802fc56c704ce87c42d7c92eb75e7896bdc41ae OP_EQUALVERIFY OP_CHECKSIG \n"
+     ]
+    }
+   ],
    "source": [
     "from tx import TxIn\n",
     "\n",
@@ -47,10 +56,15 @@
     "prev_index = 0\n",
     "\n",
     "# create the transaction input (use blank script_sig and 0xffffffff for sequence)\n",
+    "tx_in = TxIn(prev_tx, 0, b'', 0xffffffff)\n",
     "# fetch the transaction\n",
+    "t = tx_in.fetch_tx()\n",
     "# grab the output at the index\n",
+    "prev_output = t.tx_outs[prev_index]\n",
     "# show the amount\n",
-    "# show the script_pubkey"
+    "print(prev_output.amount)\n",
+    "# show the script_pubkey\n",
+    "print(prev_output.script_pubkey)"
    ]
   },
   {
